Update event handling task.html

--- a/event handling task.html
+++ b/event handling task.html
@@ -32,7 +32,7 @@ function mouseout(){
 }
 
 function keydown(){
-    alert("well you've started typingg.. ")
+    alert("well you've started typing.. ")
 }
 function pageloads(){
 
